Fixing medium screen layout problems fro about and classes, including kids classses in schedule

--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -69,11 +69,6 @@
     Sections (Overrides for style.css)
 *************************/
 
-.about-image {
-	position: relative;
-    z-index: 2;
-    margin: 10px;
-}
 .single-content h3:hover a{
     color: #2A6AB2;
 }
